refactor: refactor to support for Java 8